--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -3,6 +3,6 @@
 <head th:fragment="head"></head>
 <body>
 <h1>Welcome, <span th:text="${user.username}"></span></h1>
-<a th:href="@{/}">Select Service</a>
+<h2><a th:href="@{/}">Select Service</a></h2>
 </body>
 </html>
