--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:fragment="head"></head>
-<body>
+<head th:replace="fragments :: head"></head>
+<body class="container">
 <h1>Welcome, <span th:text="${user.username}"></span></h1>
-<h2><a th:href="@{/}">Select Service</a></h2>
+<h3><a th:href="@{/}">Select Service</a></h3>
+
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th>Username</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tr th:each="u : ${users}">
+        <td th:text="${u.username}"></td>
+        <td>
+            <a th:href="@{/user/{id}(id=${u.id})}">Details</a>
+        </td>
+    </tr>
+</table>
 </body>
 </html>
